--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "google-one-tap": "^1.0.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
